--- a/task/Templates/register.html
+++ b/task/Templates/register.html
@@ -6,40 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 
 </head>
 <body>
-    <div class="container">
+       <div class="container">
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4">
-                <div class="container border border-3 bg-primary mt-5">
-                    <h2 class="text-center">REGISTER HERE!</h2>
-                    <form action="">
-                        <div>
-                            <label for="">First Name:</label>
-                            <input type="text" class="form-control">
-                            <div>
-                                <label for="">Last Name</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div>
-                                <label for="">User Name</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div>
-                                <label for="">Password</label>
-                                <input type="password" class="form-control">
-                            </div>
-                            <div class="mt-3 mb-3 text-center text-center">
-                                <button type="button" class="btn btn-dark ">Register Now</button>
-                            </div>
-                        </div>
-                    </form>
+                {%if messages%}
+                {%for msg in messages%}
+                  {% if msg.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>{{msg}}</strong> You should check in on some of those fields below.
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+
+                  {% endif %}
+                  {% if msg.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                  <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>{{msg}}</strong> You should check in on some of those fields below.
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+
+                  {% endif %}
+
+                {%endfor%}
+
+                {%endif%}
             </div>
             <div class="col-4"></div>
         </div>
-    </div>
-    
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <form action="" method="post">
+                  {%csrf_token%}
+                  {{form.as_p}}
+                  <input type="submit" value="register">
+                </form>
+            </div>
+            <div class="col-2"></div>
+        </div>
+       </div>
 </body>
 </html>
