--- a/task/Templates/task-details.html
+++ b/task/Templates/task-details.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">{{todo.id}}</li>
-                      <li class="list-group-item">{{todo.task_name}}</li>
-                      <li class="list-group-item">{{todo.user}}</li>
-                      <li class="list-group-item">{{todo.created_date}}</li>
-                      <li class="list-group-item">{{todo.status}}</li>
-                    </ul>
-                  </div>
-            </div>
-            <div class="col-4"></div>
+{%extends 'base.html'%}
+{%block body_block%}
+<div class="container">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <div class="card" style="width: 18rem;">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">{{todo.id}}</li>
+                  <li class="list-group-item">{{todo.task_name}}</li>
+                  <li class="list-group-item">{{todo.user}}</li>
+                  <li class="list-group-item">{{todo.created_date}}</li>
+                  <li class="list-group-item">{{todo.status}}</li>
+                </ul>
+              </div>
         </div>
+        <div class="col-4"></div>
     </div>
-</body>
-</html>
+</div>
+{%endblock%}
