--- a/task/Templates/task-update.html
+++ b/task/Templates/task-update.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
 </head>
 <body>
     <div class="container">
@@ -35,7 +33,7 @@
                 <form action="" method="post">
                     {%csrf_token%}
                     {{form.as_p}}
-                    <input type="submit" value="login">
+                    <input type="submit" value="update">
 
                 </form>
             </div>
@@ -44,6 +42,7 @@
 
         </div>
     </div>
+    
     
 </body>
 </html>
