--- a/task/Templates/task.html
+++ b/task/Templates/task.html
@@ -1,42 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends 'base.html'%}
+{%block body_block%}
+<div class="container p-5">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4 bg-primary">
+            <h2 class="text-center text-white">TODO</h2>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-</head>
-
-<body>
-    <div class="container p-5">
-        <div class="row">
-            <div class="col-4"></div>
-            <div class="col-4 bg-primary">
-                <h2 class="text-center text-white">TODO</h2>
-
-                <form action="" method="post">
-                    {%csrf_token%}
+            <form action="" method="post">
+                {%csrf_token%}
+                <div class="mt-3">
                     <div class="mt-3">
-                        <label for="">Username:</label>
-                        <input type="text" class="form-control" name="username">
-                        <div class="mt-3">
-                            <label for="">Add Task:</label>
-                            <input type="text" class="form-control" name="task">
-                            <div class=" text-center mt-4 p-3 ">
-                                <button type="submit" class="btn btn-dark">Add Task</button>
-                            </div>
+                        <label for="">Add Task:</label>
+                        <input type="text" class="form-control" name="task">
+                        <div class=" text-center mt-4 p-3 ">
+                            <button type="submit" class="btn btn-dark">Add Task</button>
                         </div>
                     </div>
-                </form>
-            </div>
-            <div class="col-4"></div>
+                </div>
+            </form>
         </div>
+        <div class="col-4"></div>
     </div>
+</div>
 
-</body>
 
-</html>
+{%endblock%}
